--- a/arch/arm64/configs/lineage-a3y17lte_defconfig
+++ b/arch/arm64/configs/lineage-a3y17lte_defconfig
@@ -419,9 +419,9 @@ CONFIG_SETEND_EMULATION=y
 #
 CONFIG_CMDLINE=""
 # CONFIG_EFI is not set
-CONFIG_TIMA=y
-CONFIG_TIMA_LKMAUTH=y
-CONFIG_TIMA_RKP=y
+# CONFIG_TIMA is not set
+#CONFIG_TIMA_LKMAUTH is not set
+# CONFIG_TIMA_RKP is not set
 # CONFIG_RKP_KDP is not set
 # CONFIG_TIMA_TEST_INFRA is not set
 # CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
@@ -1111,7 +1111,7 @@ CONFIG_UID_STAT=y
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
 CONFIG_UID_CPUTIME=y
-CONFIG_TIMA_LOG=y
+# CONFIG_TIMA_LOG is not set
 # CONFIG_LEDS_IRIS_IRLED_SUPPORT is not set
 # CONFIG_LEDS_IRIS_FPGA_ICE40XX is not set
 # CONFIG_C2PORT is not set
