--- a/arch/arm64/boot/dts/exynos7870-pinctrl.dtsi
+++ b/arch/arm64/boot/dts/exynos7870-pinctrl.dtsi
@@ -83,6 +83,24 @@
 			samsung,pin-pud = <0>;
 		};
 
+		bt_btwake: bt-btwake {
+			samsung,pins = "gpa1-2";
+			samsung,pin-function = <1>;
+			samsung,pin-pud = <1>;
+		};
+
+		bt_hostwake: bt-hostwake {
+			samsung,pins = "gpa1-6";
+			samsung,pin-function = <0>;
+			samsung,pin-pud = <0>;
+		};
+
+		uart2_sleep: uart2-sleep {
+			samsung,pins = "gpa1-1";
+			samsung,pin-function = <0>;
+			samsung,pin-pud = <1>;
+		};
+
 		gnss_sensor_i2c: gnss-sensor-i2c {
 			samsung,pins = "gpa2-5", "gpa2-4";
 			samsung,pin-function = <6>;
@@ -94,9 +112,13 @@
 			samsung,pin-function = <6>;
 			samsung,pin-pud = <3>;
 		};
+		nfc_int: nfc-int {
+			samsung,pins = "gpa2-6";
+			samsung,pin-function = <0>;
+			samsung,pin-pud = <1>;
+		};
 	};
 
-	/* ESE */
 	pinctrl@139E0000 {
 		gpc7: gpc7 {
 			gpio-controller;
@@ -106,19 +128,18 @@
 			#interrupt-cells = <2>;
 		};
 
-		/* SPI_ESE */
 		spi1_bus: spi1-bus {
 			samsung,pins = "gpc7-3", "gpc7-2", "gpc7-0";
 			samsung,pin-function = <2>;
 			samsung,pin-pud = <3>;
-			samsung,pin-drv = <0>;
+			samsung,pin-drv = <2>;
 		};
 
 		spi1_cs_0: spi1-cs-0 {
 			samsung,pins = "gpc7-1";
 			samsung,pin-function = <1>;
 			samsung,pin-pud = <3>;
-			samsung,pin-drv = <0>;
+			samsung,pin-drv = <2>;
 		};
 
 		spi1_cs_1: spi1-cs-1 {
@@ -131,50 +152,63 @@
 
 
 	pinctrl@148C0000 {
+		gpz0: gpz0 {
+			gpio-controller;
+			#gpio-cells = <2>;
 
-                gpz0: gpz0 {
-                        gpio-controller;
-                        #gpio-cells = <2>;
+			interrupt-controller;
+			#interrupt-cells = <2>;
+		};
 
-                        interrupt-controller;
-                        #interrupt-cells = <2>;
-                };
+		gpz1: gpz1 {
+			gpio-controller;
+			#gpio-cells = <2>;
 
-                gpz1: gpz1 {
-                        gpio-controller;
-                        #gpio-cells = <2>;
+			interrupt-controller;
+			#interrupt-cells = <2>;
+		};
 
-                        interrupt-controller;
-                        #interrupt-cells = <2>;
-                };
+		i2s_bt_bus: i2s-bt-bus {
+			samsung,pins = "gpz0-0", "gpz0-1", "gpz0-2", "gpz0-3";
+			samsung,pin-function = <2>;
+			samsung,pin-pud = <3>;
+			samsung,pin-drv = <2>;
+		};
 
-                i2s_bt_bus: i2s-bt-bus {
-                        samsung,pins = "gpz0-0", "gpz0-1", "gpz0-2", "gpz0-3";
-                        samsung,pin-function = <2>;
-                        samsung,pin-pud = <3>;
-                        samsung,pin-drv = <2>;
-                };
+		i2s_bt_bus_idle: i2s-bt-bus-idle {
+			samsung,pins = "gpz0-0", "gpz0-1", "gpz0-2", "gpz0-3";
+			samsung,pin-function = <0>;
+			samsung,pin-pud = <3>;
+			samsung,pin-drv = <2>;
+		};
 
-                i2s_bt_bus_idle: i2s-bt-bus-idle {
-                        samsung,pins = "gpz0-0", "gpz0-1", "gpz0-2", "gpz0-3";
-                        samsung,pin-function = <0>;
-                        samsung,pin-pud = <3>;
-                        samsung,pin-drv = <2>;
-                };
-
-                i2s_pmic_bus: i2s-pmic-bus {
-                        samsung,pins = "gpz1-0", "gpz1-2", "gpz1-3", "gpz1-4";
-                        samsung,pin-function = <2>;
-                        samsung,pin-pud = <3>;
-                        samsung,pin-drv = <2>;
-                };
+		i2s_pmic_bus: i2s-pmic-bus {
+			samsung,pins = "gpz1-0", "gpz1-2", "gpz1-3", "gpz1-4";
+			samsung,pin-function = <2>;
+			samsung,pin-pud = <3>;
+			samsung,pin-drv = <5>;
+		};
 
 		i2s_pmic_bus_idle: i2s-pmic-bus-idle {
-                        samsung,pins = "gpz1-0", "gpz1-2", "gpz1-3", "gpz1-4";
-                        samsung,pin-function = <0>;
-                        samsung,pin-pud = <3>;
-                        samsung,pin-drv = <2>;
-                };
+			samsung,pins = "gpz1-0", "gpz1-2", "gpz1-3", "gpz1-4";
+			samsung,pin-function = <0>;
+			samsung,pin-pud = <3>;
+			samsung,pin-drv = <5>;
+		};
+
+		i2s_pmic_amp_bus: i2s-pmic-amp-bus {
+			samsung,pins = "gpz1-0", "gpz1-1", "gpz1-2", "gpz1-3", "gpz1-4";
+			samsung,pin-function = <2>;
+			samsung,pin-pud = <3>;
+			samsung,pin-drv = <5>;
+		};
+
+		i2s_pmic_amp_bus_idle: i2s-pmic-amp-bus-idle {
+			samsung,pins = "gpz1-0", "gpz1-1", "gpz1-2", "gpz1-3", "gpz1-4";
+			samsung,pin-function = <0>;
+			samsung,pin-pud = <3>;
+			samsung,pin-drv = <5>;
+		};
 
 		i2s_amp_bus: i2s-amp-bus {
 			samsung,pins = "gpz1-5";
@@ -189,7 +223,21 @@
 			samsung,pin-pud = <3>;
 			samsung,pin-drv = <2>;
 		};
-        };
+
+		i2s_fm_bus: i2s-fm-bus {
+			samsung,pins = "gpz2-0", "gpz2-1", "gpz2-2", "gpz2-3";
+			samsung,pin-function = <2>;
+			samsung,pin-pud = <0>;
+			samsung,pin-drv = <2>;
+		};
+
+		i2s_fm_bus_idle: i2s-fm-bus-idle {
+			samsung,pins = "gpz2-0", "gpz2-1", "gpz2-2", "gpz2-3";
+			samsung,pin-function = <0>;
+			samsung,pin-pud = <0>;
+			samsung,pin-drv = <2>;
+		};
+	};
 
 	/* FSYS */
 	pinctrl@13750000 {
@@ -207,6 +255,7 @@
 			samsung,pin-pud = <0>;
 			samsung,pin-drv = <2>;
 		};
+
 		sd0_cmd: sd0-cmd {
 			samsung,pins = "gpr0-1";
 			samsung,pin-function = <2>;
@@ -217,8 +266,50 @@
 		sd0_rdqs: sd0-rdqs {
 			samsung,pins = "gpr0-2";
 			samsung,pin-function = <2>;
-			samsung,pin-pud = <1>;
+			samsung,pin-pud = <0>;
 			samsung,pin-drv = <2>;
+		};
+
+		sd0_clk_fast_slew_rate_1x: sd0-clk_fast_slew_rate_1x {
+			samsung,pins = "gpr0-0";
+			samsung,pin-function = <2>;
+			samsung,pin-pud = <0>;
+			samsung,pin-drv = <0>;
+		};
+
+		sd0_clk_fast_slew_rate_2x: sd0-clk_fast_slew_rate_2x {
+			samsung,pins = "gpr0-0";
+			samsung,pin-function = <2>;
+			samsung,pin-pud = <0>;
+			samsung,pin-drv = <1>;
+		};
+
+		sd0_clk_fast_slew_rate_3x: sd0-clk_fast_slew_rate_3x {
+			samsung,pins = "gpr0-0";
+			samsung,pin-function = <2>;
+			samsung,pin-pud = <0>;
+			samsung,pin-drv = <2>;
+		};
+
+		sd0_clk_fast_slew_rate_4x: sd0-clk_fast_slew_rate_4x {
+			samsung,pins = "gpr0-0";
+			samsung,pin-function = <2>;
+			samsung,pin-pud = <0>;
+			samsung,pin-drv = <3>;
+		};
+
+		sd0_clk_fast_slew_rate_5x: sd0-clk_fast_slew_rate_5x {
+			samsung,pins = "gpr0-0";
+			samsung,pin-function = <2>;
+			samsung,pin-pud = <0>;
+			samsung,pin-drv = <4>;
+		};
+
+		sd0_clk_fast_slew_rate_6x: sd0-clk_fast_slew_rate_6x {
+			samsung,pins = "gpr0-0";
+			samsung,pin-function = <2>;
+			samsung,pin-pud = <0>;
+			samsung,pin-drv = <5>;
 		};
 
 		gpr1: gpr1 {
@@ -250,6 +341,38 @@
 			samsung,pin-drv = <2>;
 		};
 
+		sd1_clk: sd1-clk {
+			samsung,pins = "gpr2-0";
+			samsung,pin-function = <2>;
+			samsung,pin-pud = <0>;
+			samsung,pin-drv = <2>;
+		};
+
+		sd1_cmd: sd1-cmd {
+			samsung,pins = "gpr2-1";
+			samsung,pin-function = <2>;
+			samsung,pin-pud = <0>;
+			samsung,pin-drv = <2>;
+		};
+
+		sd1_bus1: sd1-bus-width1 {
+			samsung,pins = "gpr3-0";
+			samsung,pin-function = <2>;
+			samsung,pin-pud = <3>;
+			samsung,pin-drv = <2>;
+			samsung,pin-con-pdn = <2>;
+			samsung,pin-pud-pdn = <3>;
+		};
+
+		sd1_bus4: sd1-bus-width4 {
+			samsung,pins = "gpr3-1", "gpr3-2", "gpr3-3";
+			samsung,pin-function = <2>;
+			samsung,pin-pud = <3>;
+			samsung,pin-drv = <2>;
+			samsung,pin-con-pdn = <2>;
+			samsung,pin-pud-pdn = <3>;
+		};
+
 		sd2_clk: sd2-clk {
 			samsung,pins = "gpr4-0";
 			samsung,pin-function = <2>;
@@ -278,6 +401,33 @@
 			samsung,pin-drv = <2>;
 		};
 
+		sd2_clk_fast_slew_rate_1x: sd2-clk_fast_slew_rate_1x {
+			samsung,pins = "gpr4-0";
+			samsung,pin-function = <2>;
+			samsung,pin-pud = <0>;
+			samsung,pin-drv = <0>;
+		};
+
+		sd2_clk_fast_slew_rate_2x: sd2-clk_fast_slew_rate_2x {
+			samsung,pins = "gpr4-0";
+			samsung,pin-function = <2>;
+			samsung,pin-pud = <0>;
+			samsung,pin-drv = <1>;
+		};
+
+		sd2_clk_fast_slew_rate_3x: sd2-clk_fast_slew_rate_3x {
+			samsung,pins = "gpr4-0";
+			samsung,pin-function = <2>;
+			samsung,pin-pud = <0>;
+			samsung,pin-drv = <2>;
+		};
+
+		sd2_clk_fast_slew_rate_4x: sd2-clk_fast_slew_rate_4x {
+			samsung,pins = "gpr4-0";
+			samsung,pin-function = <2>;
+			samsung,pin-pud = <0>;
+			samsung,pin-drv = <3>;
+		};
 	};
 
 	/* MIF */
@@ -296,6 +446,7 @@
 			samsung,pin-function = <2>;
 			samsung,pin-pud = <0>;
 			samsung,pin-drv = <0>;
+			samsung,pin-con-pdn = <3>;
 		};
 	};
 
@@ -313,7 +464,7 @@
 		i2c2_bus: i2c2-bus {
 			samsung,pins = "gpc2-1", "gpc2-0";
 			samsung,pin-function = <2>;
-			samsung,pin-pud = <3>;
+			samsung,pin-pud = <0>;
 			samsung,pin-drv = <0>;
 		};
 
@@ -324,6 +475,19 @@
 			samsung,pin-drv = <0>;
 			samsung,pin-con-pdn = <3>;
 			samsung,pin-val = <1>;
+		};
+		nfc_pd: nfc_pd {
+			samsung,pins = "gpc2-2";
+			samsung,pin-function = <2>;
+			samsung,pin-pud = <3>;
+			samsung,pin-drv = <0>;
+		};
+
+		nfc_n5_clk_req: nfc_n5_clk_req {
+			samsung,pins = "gpc2-3";
+			samsung,pin-function = <2>;
+			samsung,pin-pud = <1>;
+			samsung,pin-drv = <0>;
 		};
 	};
 
@@ -473,16 +637,16 @@
 			#interrupt-cells = <2>;
 		};
 
-		/* UART_SENSOR */
+		/* UART_BTWIFIFM */
 		uart0_bus: uart0-bus {
 			samsung,pins = "gpb0-3", "gpb0-2", "gpb0-1", "gpb0-0";
 			samsung,pin-function = <2>;
 			samsung,pin-pud = <0>;
 		};
 
-		/* UART_BTWIFIFM */
+		/* UART_SENSOR */
 		uart1_bus: uart1-bus {
-			samsung,pins = "gpd2-2", "gpd2-1", "gpd2-0";
+			samsung,pins = "gpd2-3", "gpd2-2", "gpd2-1", "gpd2-0";
 			samsung,pin-function = <2>;
 			samsung,pin-pud = <0>;
 		};
@@ -552,6 +716,8 @@
 			samsung,pin-function = <2>;
 			samsung,pin-pud = <3>;
 			samsung,pin-drv = <0>;
+			samsung,pin-con-pdn = <3>;
+			samsung,pin-pud-pdn = <3>;
 		};
 
 		/* I2C_MUIC */
@@ -590,7 +756,7 @@
 		i2c7_bus: i2c7-bus {
 			samsung,pins = "gpc8-1", "gpc8-0";
 			samsung,pin-function = <2>;
-			samsung,pin-pud = <3>;
+			samsung,pin-pud = <0>;
 			samsung,pin-drv = <0>;
 		};
 
@@ -602,11 +768,18 @@
 			samsung,pin-drv = <0>;
 		};
 
-		/* SPI_VOICEPROCESSOR */
+		/* SPI_ESE */
 		spi0_bus: spi0-bus {
-			samsung,pins = "gpc6-3", "gpc6-2", "gpc6-0";
+			samsung,pins = "gpc6-0", "gpc6-2", "gpc6-3";
 			samsung,pin-function = <2>;
 			samsung,pin-pud = <3>;
+			samsung,pin-drv = <0>;
+		};
+
+		spi0_bus_suspend: spi0-bus-suspend {
+			samsung,pins = "gpc6-0", "gpc6-2", "gpc6-3";
+			samsung,pin-function = <0>; /* IN */
+			samsung,pin-pud = <1>; /* PD */
 			samsung,pin-drv = <0>;
 		};
 
@@ -619,7 +792,14 @@
 
 		/* SPI_SENSORHUB */
 		spi2_bus: spi2-bus {
-			samsung,pins = "gpc5-1", "gpc5-0", "gpc4-2";
+			samsung,pins = "gpc4-2", "gpc5-0", "gpc5-1";
+			samsung,pin-function = <3>;
+			samsung,pin-pud = <3>;
+			samsung,pin-drv = <0>;
+		};
+
+		spi2_cs_func: spi2-cs-func {
+			samsung,pins = "gpc4-3";
 			samsung,pin-function = <3>;
 			samsung,pin-pud = <3>;
 			samsung,pin-drv = <0>;
@@ -654,7 +834,19 @@
 			samsung,pin-drv = <0>;
 		};
 
+		/* HSI2C_SPI_FRONTFROM */
+		hs_i2c2_2_bus: hs-i2c2-2-bus {
+		   samsung,pins = "gpf4-2", "gpf4-3";
+		   samsung,pin-function = <3>;
+		   samsung,pin-pud = <0>;
+		   samsung,pin-drv = <0>;
+		};
+
 		/* SPI_FRONTFROM */
+
+		/delete-node/ spi4-bus;
+		/delete-node/ spi4-cs-0;
+
 		spi4_bus: spi4-bus {
 			samsung,pins = "gpf4-3", "gpf4-2", "gpf4-0";
 			samsung,pin-function = <2>;
@@ -718,6 +910,14 @@
 			samsung,pin-drv = <2>;
 		};
 
+		fimc_is_mclk2_out: fimc_is_mclk2_out {
+			samsung,pins = "gpf4-4";
+			samsung,pin-function = <1>;
+			samsung,pin-pud = <0>;
+			samsung,pin-drv = <2>;
+			samsung,pin-val = <0>;
+		};
+
 		fimc_is_mclk0_fn: fimc_is_mclk0_fn {
 			samsung,pins = "gpe0-0";
 			samsung,pin-function = <2>;
@@ -732,11 +932,60 @@
 			samsung,pin-drv = <1>;
 		};
 
-		fimc_is_flash: fimc-is-flash {
-			samsung,pins = "gpd3-2", "gpd3-3";
+		fimc_is_mclk2_fn: fimc_is_mclk2_fn {
+			samsung,pins = "gpf4-4";
 			samsung,pin-function = <2>;
 			samsung,pin-pud = <0>;
+			samsung,pin-drv = <2>;
+		};
+
+		fimc_is_flash: fimc-is-flash {
+			samsung,pins = "gpd3-2", "gpd3-3";
+			samsung,pin-function = <1>;
+			samsung,pin-pud = <0>;
 			samsung,pin-drv = <0>;
+		};
+
+		bt_en: bt-en {
+			samsung,pins ="gpd4-0";
+			samsung,pin-function = <1>;
+			samsung,pin-pud = <1>;
+			samsung,pin-con-pdn = <3>;
+			samsung,pin-pud-pdn = <0>;
+		};
+
+		nfc_n5_firm: nfc_n5_firm {
+			samsung,pins = "gpd4-1";
+			samsung,pin-function = <1>;
+			samsung,pin-pud = <1>;
+			samsung,pin-val = <1>;
+		};
+
+		nfc_pvdd_en: nfc-pvdd-en {
+			samsung,pins = "gpd2-1";
+			samsung,pin-function = <1>;
+			samsung,pin-pud = <3>;
+			samsung,pin-drv = <3>;
+		};
+		
+		ese_pvdd_en: ese-pvdd-en {
+			samsung,pins = "gpf4-0";
+			samsung,pin-function = <1>;
+			samsung,pin-pud = <1>;
+			samsung,pin-drv = <3>;
+		};
+		spi2_mosi_sck_ssn: spi2-mosi-sck-ssn {
+			samsung,pins = "gpc5-1", "gpc4-2", "gpc4-3";
+			samsung,pin-function = <3>;
+			samsung,pin-pud = <3>;
+			samsung,pin-drv = <3>;
+		};
+		spi2_miso: spi2-miso {
+			samsung,pins = "gpc5-0";
+			samsung,pin-function = <3>;
+			samsung,pin-pud = <0>;
+			samsung,pin-drv = <3>;
+			samsung,pin-pud-pdn = <0>;
 		};
 	};
 
@@ -755,6 +1004,22 @@
 			samsung,pins = "gpc3-1", "gpc3-0";
 			samsung,pin-function = <2>;
 			samsung,pin-pud = <3>;
+			samsung,pin-drv = <0>;
+		};
+
+		/*SPI_ESE*/
+		ese_cs_func: ese-cs-func {
+			samsung,pins ="gpc3-2";
+			samsung,pin-function = <1>; /* OUT */
+			samsung,pin-pud = <0>; /* NP */
+			samsung,pin-drv = <0>;
+			samsung,pin-val = <1>; /* HIGH */
+		};
+
+		ese_cs_func_suspend: ese-cs-func-suspend {
+			samsung,pins ="gpc3-2";
+			samsung,pin-function = <0>; /* IN */
+			samsung,pin-pud = <1>; /* PD */
 			samsung,pin-drv = <0>;
 		};
 	};
