--- a/arch/arm64/boot/dts/modem-ss315ap-pdata.dtsi
+++ b/arch/arm64/boot/dts/modem-ss315ap-pdata.dtsi
@@ -27,6 +27,10 @@
 		mif,irq_cp2ap_status = <2>;
 		mif,irq_cp2ap_perf_req = <3>;
 		mif,irq_cp2ap_active = <4>;
+		mif,irq_cp2ap_perf_req_cpu = <5>;
+		mif,irq_cp2ap_perf_req_mif = <6>;
+		mif,irq_cp2ap_perf_req_int = <7>;
+
 
 		mbx_ap2cp_msg = <0>;
 		mbx_cp2ap_msg = <1>;
@@ -37,6 +41,10 @@
 		mbx_ap2cp_active = <6>;
 		mbx_cp2ap_dvfsreq = <7>;
 		mbx_cp2ap_active = <9>;
+		mbx_cp2ap_dvfsreq_cpu = <10>;
+		mbx_cp2ap_dvfsreq_mif = <11>;
+		mbx_cp2ap_dvfsreq_int = <12>;
+
 		mbx_ap2cp_uart_noti = <30>;
 		mbx_ap2cp_info_value = <33>;
 		mbx_ap2cp_lock_value = <39>;
@@ -49,7 +57,7 @@
 		mif,link_types = <0x200>;	/* LINKDEV_SHMEM */
 		mif,link_name = "shmem";
 		mif,link_attrs = <0x7C8>;	/* XMIT_BTDLR(0x400) | DUMP_ALIGNED (0x200) | BOOT_ALIGNED (0x100) | MEM_DUMP (0x80) | MEM_BOOT (0x40) | DPRAM_MAGIC (0x08) */
-		mif,num_iodevs = <18>;
+		mif,num_iodevs = <20>;
 
 		iodevs {
 			io_device_0 {
@@ -67,7 +75,7 @@
 				iod,format = <0>;		/* IPC_FMT */
 				iod,io_type = <0>;		/* IODEV_MISC */
 				iod,links = <0x200>;		/* LINKDEV_SHMEM */
-				iod,attrs = <0x402>;		/* ATTR_SBD_IPC | ATTR_SIPC5 */
+				iod,attrs = <0x2>;		/* ATTR_SIPC5 */
 				iod,app = "RIL";
 			};
 			io_device_2 {
@@ -96,6 +104,7 @@
 				iod,links = <0x200>;
 				iod,attrs = <0x2>;
 				iod,app = "Data Router";
+				iod,max_tx_size = <2048>;
 			};
 			io_device_5 {
 				iod,name = "umts_dm0";
@@ -157,7 +166,7 @@
 				iod,format = <1>;
 				iod,io_type = <1>;
 				iod,links = <0x200>;
-				iod,attrs = <0x402>;	/* ATTR_DUALSIM (0x400) */
+				iod,attrs = <0x2>;
 			};
 			io_device_12 {
 				iod,name = "rmnet5";
@@ -165,7 +174,7 @@
 				iod,format = <1>;
 				iod,io_type = <1>;
 				iod,links = <0x200>;
-				iod,attrs = <0x402>;
+				iod,attrs = <0x2>;
 			};
 			io_device_13 {
 				iod,name = "rmnet6";
@@ -173,7 +182,7 @@
 				iod,format = <1>;
 				iod,io_type = <1>;
 				iod,links = <0x200>;
-				iod,attrs = <0x402>;
+				iod,attrs = <0x2>;
 			};
 			io_device_14 {
 				iod,name = "rmnet7";
@@ -181,7 +190,7 @@
 				iod,format = <1>;
 				iod,io_type = <1>;
 				iod,links = <0x200>;
-				iod,attrs = <0x402>;
+				iod,attrs = <0x2>;
 			};
 			io_device_15 {
 				iod,name = "multipdp";
@@ -210,15 +219,24 @@
 				iod,attrs = <0x202>;		/* ATTR_NO_CHECK_MAXQ | ATTR_SIPC5 */
 				iod,app = "CBD";
 			};
+			io_device_18 {
+				iod,name = "smd4";
+				iod,id = <33>;
+				iod,format = <1>;
+				iod,io_type = <0>;
+				iod,links = <0x200>;
+				iod,attrs = <0x802>;
+				iod,option_region = "kor_skt";
+			};
+			io_device_19 {
+				iod,name = "umts_ciq0";
+				iod,id = <26>;
+				iod,format = <1>;
+				iod,io_type = <0>;
+				iod,links = <0x200>;
+				iod,attrs = <0x802>;
+				iod,option_region = "usa_att";
+			};
 		}; /* end of iodevs */
 	}; /* end of mif_pdata */
-
-	shmem: shmem@F0000000 {
-		compatible = "samsung,exynos7870-shm_ipc";
-
-		reg = <0x0 0xB0000000 0x7800000>;
-
-		shmem,ipc_offset = <0x7400000>;
-		shmem,ipc_size = <0x400000>;
-	};
 };
